# Spyder-old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt  SourceList.cmake
engine/src/engine/: Engine.cpp  Engine.h
engine/src/engine/core/: Base.h  Log.cpp  Log.h  PrecompiledHeaders.h  Types.cpp  Types.h  Window.cpp  Window.h
engine/src/engine/entity component system/: GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h
engine/src/engine/shaders/: CompileShader.cpp  CompileShader.h  ShaderCache.cpp  ShaderCache.h  Shaders.h
engine/src/engine/utilities/: UtilityFunctions.cpp  UtilityFunctions.h
engine/src/engine/vulkan/: Batch.cpp  Batch.h  Buffer.cpp  Buffer.h  CommandPool.cpp  CommandPool.h  Device.cpp  Device.h  Instance.cpp  Instance.h  MemoryAllocator.cpp  MemoryAllocator.h  MemoryManagement.cpp  MemoryManagement.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  SwapChain.cpp  SwapChain.h  Types.cpp  Types.h  VulkanBase.h  VulkanPrecompiledHeaders.h  VulkanTypes.cpp  VulkanTypes.h
engine/src/engine/vulkan/descriptors/: DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorWriter.cpp  DescriptorWriter.h
engine/src/engine/vulkan/gui/: UI.cpp  UI.h
engine/src/engine/vulkan/renderers/: MeshRenderer.cpp  (+1 more)
engine/src/engine/window/: EventHandler.cpp  EventHandler.h  Window.cpp  Window.h
testing framework/: CMakeLists.txt  SourceList.cmake
testing framework/src/: main.cpp
testing framework/src/framework/: Framework.cpp  Framework.h
(+1 files in other folders)
